# Lightweight-evaluation-C-

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: sample_process.h  samplemodel.h  utils.h
src/: model_process.cpp  sam.cpp  sample_process.cpp  time.cpp  utils.cpp
